Added jib and actuator improvements